--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev-build": "webpack --config webpack.dev.config.js",
     "start": "webpack-dev-server --config webpack.dev.config.js  --color --progress",
-    "build": "webpack --config webpack.config.js"
+    "dev-build": "webpack --config webpack.dev.config.js",
+    "build": "webpack --config webpack.prod.config.js"
   },
   "author": "",
   "license": "ISC",
@@ -22,6 +21,7 @@
     "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.11",
+    "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
     "react-hot-loader": "^4.1.3",
     "style-loader": "^0.21.0",
